docs/guides/kubernetes/manifests/sth-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: sth-api
  labels:
    app: sth
    app.kubernetes.io/name: sth
    service: sth-external
spec:
  type: NodePort
  ports:
  - port: 8000
    name: sth
    targetPort: sth-api
  externalTrafficPolicy: Local
  selector:
    app: sth
---
apiVersion: v1
kind: Service
metadata:
  name: sth-runner
  labels:
    app: sth
    app.kubernetes.io/name: sth
    service: sth-runner
spec:
  type: ClusterIP
  ports:
  - port: 8001
    name: sth
    targetPort: sth-runner
  selector:
    app: sth
