docs/guides/kubernetes/manifests/sth-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: sth-policy
  labels:
    app.kubernetes.io/name: sth
spec:
  podSelector:
    matchLabels:
       app: sth
  ingress:
  - ports:
      - port: 8000
      - port: 8001
  egress:
  - {}
  policyTypes:
    - Ingress
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: runner-policy
  labels:
    app.kubernetes.io/name: runner
spec:
  podSelector:
    matchLabels:
       app: runner
  ingress:
    - {}
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - to:
        - podSelector:
            matchLabels:
              app: sth
      ports:
        - port: 8001
          protocol: TCP
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - port: 53
          protocol: UDP
  policyTypes:
    - Ingress
    - Egress
